# finm37000-2025

./: .gitignore  =4.2.0  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: python-package.yml
notebooks/: calendars.ipynb  constant_maturity.ipynb  continuous_contracts.ipynb  greeks.ipynb  intercommodity_spreads.ipynb  options_on_futures.ipynb  pairs_trade.ipynb  s_and_p.ipynb  settlement.ipynb  skew.ipynb
src/finm37000/: __init__.py  agg.py  constant_maturity.py  constant_maturity_code.py  constant_maturity_splice.py  continuous.py  dates.py  db_env_util.py  env.py  futures.py  get_roll_spec.py  implied_markets.ipynb  options.py  roll_spec.py  rollspec.py  skew.py
tests/: test_constant_maturity.py  test_continuous.py
